Atualização do arquivo dbconfig.ini

--- a/Win32/Debug/dbconfig.ini
+++ b/Win32/Debug/dbconfig.ini
@@ -2,6 +2,6 @@
 Server=localhost
 Port=3306
 Database=pedidoVenda
-Username=root
-Password=roger10
+Username=pedidovendauser
+Password=pedidovenda123
 LibraryPath=\lib\libmysql.dll
